# interactive-ebook-creator-vercel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  INSTALL.md  LICENSE  README.md  book.json  editor.html  fix_book_pages.js  fix_filenames.js  index.html  package-lock.json  package.json  修复总结.md  功能完成清单.md  按钮功能使用说明.md  按钮功能修复说明.md  显示图片信息终结版1126.py  重构完成总结.md
.github/workflows/: ci.yml  deploy.yml  publish.yml
js/: editor.js  packager.js  player.js
src/: app.rs  app_complete.rs  app_simple.rs  excel_export.rs  fonts.rs  image_info.rs  main.rs  utils.rs
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
ui/: big_editor.html  book.json  books.json  editor.html  index.html  index_a4.html  index_current.html  index_simple.html  library.html  player.html
ui/css/: dark-theme.css  styles.css
ui/js/: editor.js  packager.js  player.js  tauri-adapter.js  theme-manager.js  undo-manager.js
