[package]
name = "image-info-tool"
version = "0.1.0"
edition = "2021"
authors = ["zwm"]
description = "图片信息批量处理工具（Rust重构版）"
repository = "https://github.com/YOUR_USERNAME/image-info-tool"
license = "MIT OR Apache-2.0"
keywords = ["image", "batch", "rename", "cmyk", "tool"]
categories = ["command-line-utilities", "gui", "multimedia::images"]
readme = "README.md"
homepage = "https://github.com/YOUR_USERNAME/image-info-tool"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# GUI
eframe = "0.27"
egui = "0.27"
egui_extras = "0.27"

# 图片处理
image = "0.25"
imageproc = "0.24"
color-thief = "0.2"

# 文件处理
walkdir = "2.5"
glob = "0.3"
filetime = "0.2"

# Excel导出
csv = "1.3"

# 异步和多线程
tokio = { version = "1.0", features = ["full"] }
rayon = "1.10"

# 日志
log = "0.4"
env_logger = "0.11"
simplelog = "0.12"

# 工具库
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
humansize = "2.1"
once_cell = "1.19"
rfd = "0.14"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true  # 减小二进制文件大小

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

# 平台特定依赖
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2.7"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"